starting with claude cleaning shit up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,29 @@
     <string name="delete_category_confirm">Delete category and all its products?</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="action_save">Save</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="save_state_dialog_title">Save Current List</string>
+    <string name="save_state_dialog_hint">Enter a name for this list</string>
+    <string name="restore_state_dialog_title">Restore Saved List</string>
+    <string name="state_saved">List saved successfully</string>
+    <string name="state_restored">List restored successfully</string>
+    <string name="error_saving_state">Error saving list</string>
+    <string name="error_restoring_state">Error restoring list</string>
+    <string name="confirm_delete">Delete</string>
+    <string name="confirm_delete_state">Delete "%s"?</string>
+    <string name="delete_state_confirmation">Are you sure you want to delete this saved list? This action cannot be undone.</string>
+    <string name="state_deleted">List deleted</string>
+    <string name="error_deleting_state">Error deleting list</string>
+    <string name="restoring_list">Restoring list…</string>
+    <string name="no_name_provided">Please provide a name</string>
+    <string name="state_exists">A state with this name already exists</string>
     <string name="category_has_products">This category contains products. Delete category and all its products?</string>
     <string name="drag_handle">Drag handle</string>
+    <string name="no_saved_states">No saved lists found</string>
+    <string name="restore">Restore</string>
+    <string name="save_state">Save List</string>
+    <string name="restore_state">Restore List</string>
+    <string name="drag_handle_color">#757575</string>
 </resources>
